--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
-    "bits-ui": "^1.0.0-next.95",
+    "bits-ui": "^1.1.0",
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.5.2",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^2.46.1",
     "formsnap": "^2.0.0",
-    "globals": "^15.14.0",
+    "globals": "^15.15.0",
     "lucide-svelte": "^0.473.0",
     "mode-watcher": "^0.5.1",
     "paneforge": "^1.0.0-next.2",
-    "prettier": "^3.5.0",
+    "prettier": "^3.5.1",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.19.10",
+    "svelte": "^5.20.0",
     "svelte-check": "^4.1.4",
     "svelte-sonner": "^0.3.28",
     "sveltekit-superforms": "^2.23.1",
