--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@sveltejs/enhanced-img": "^0.4.4",
-    "@tanstack/table-core": "^8.21.2"
+    "@tanstack/table-core": "^8.21.2",
+    "@uppy/core": "^4.4.2",
+    "@uppy/dashboard": "^4.3.1",
+    "@uppy/svelte": "^4.3.0"
   }
 }
